--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
 <li><a href=https://www.twitter.com><img class="img-twitter" src="img/twitter.png" alt="Twitter icon" /></a></li>
 <li><a href=https://www.instagram.com><img class="img-instagram" src="img/instagram.png" alt="Instagram icon" /></a></li>
 <li><a href=https://www.facebook.com><img class="img-facebook" src="img/facebook.png" alt="Facebook icon" /></a></li>
-</ul>
+<li>Accessibility</li>
+<li>Privacy</li>
+<li>Copyright RuairiLtd.</li></ul>
 
 
 </footer>
